name:                hnix-store-core
version:             0.1.0.0
synopsis:            Core effects for interacting with the Nix store.
description:
        This package contains types and functions needed to describe
        interactions with the Nix store abstracted away from
        specific effectful context.
homepage:            https://github.com/haskell-nix/hnix-store
license:             Apache-2.0
license-file:        LICENSE
author:              Shea Levy
maintainer:          shea@shealevy.com
copyright:           2018 Shea Levy
category:            System
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:     Crypto.Hash.Truncated
                     , System.Nix.Nar
                     , System.Nix.Path
                     , System.Nix.Store
  build-depends:       base >=4.10 && <4.11,
                       -- Drop foundation when we can drop cryptonite <0.25
                       binary,
                       bytestring, containers, cryptonite, memory, foundation, basement,
                       text, regex-base, regex-tdfa-text,
                       hashable, unordered-containers, bytestring 
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite format-tests
   type: exitcode-stdio-1.0
   main-is: Driver.hs
   other-modules:
       Nar
   hs-source-dirs:
       tests 
   build-depends:
       hnix-store-core
     , base
     , base64-bytestring
     , binary
     , bytestring
     , containers
     , tasty
     , tasty-hunit
     , tasty-hspec
     , tasty-discover
   default-language: Haskell2010