name:                hnix-store-db
version:             0.1.0.0
synopsis:            Nix store database support
description:         Implementation of the nix store database
homepage:            https://github.com/haskell-nix/hnix-store
license:             Apache-2.0
license-file:        LICENSE
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2020 Richard Marko
category:            Nix
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     System.Nix.Store.DB
                     , System.Nix.Store.DB.Query
                     , System.Nix.Store.DB.Instances
                     , System.Nix.Store.DB.Run
                     , System.Nix.Store.DB.Schema
                     , System.Nix.Store.DB.Util

  build-depends:       base >=4.10 && <5
                     , attoparsec
                     , bytestring
                     , binary
                     , bytestring
                     , containers
                     , filepath
                     , text
                     , unix
                     , network
                     , mtl
                     , transformers
                     , resourcet
                     , safe
                     , unordered-containers
                     , filepath
                     , time
                     , hnix-store-core
                     , hnix-store-remote
                     , vector
                     , esqueleto
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , monad-logger
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

--test-suite hnix-store-db-tests
--   ghc-options:       -rtsopts -fprof-auto
--   type:              exitcode-stdio-1.0
--   main-is:           Driver.hs
--   other-modules:
--       NixDaemon
--   hs-source-dirs:    tests
--   build-depends:
--                       attoparsec
--                     , hnix-store-core
--                     , hnix-store-remote
--                     , base
--                     , base64-bytestring
--                     , binary
--                     , bytestring
--                     , containers
--                     , directory
--                     , process
--                     , filepath
--                     , hspec-expectations-lifted
--                     , tasty
--                     , tasty-discover
--                     , tasty-hspec
--                     , tasty-hunit
--                     , tasty-quickcheck
--                     , linux-namespaces
--                     , mtl
--                     , temporary
--                     , text
--                     , time
--                     , unix
--                     , unordered-containers
--                     , vector
--   default-language: Haskell2010
